--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -4,8 +4,8 @@
       <h1>Quotes</h1>
       <%= link_to "New quote",
                   new_quote_path,
-                  data: { turbo_frame: dom_id(Quote.new) },
-                  class: "btn btn--primary" %>
+                  class: "btn btn--primary",
+                  data: { turbo_frame: dom_id(Quote.new) } %>
     </div>
 
     <%= turbo_frame_tag Quote.new %>
