--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -6,12 +6,15 @@
 @import "config/variables";
 @import "config/reset";
 
+
 // Components
 @import "components/btn";
 @import "components/error_message";
 @import "components/form";
 @import "components/visually_hidden";
 @import "components/quote";
+@import "components/navbar";
+
 
 // Layouts
 @import "layouts/container";
@@ -22,4 +25,6 @@
 @import "components/btn";
 
 // All the previous code
-@import "components/turbo_progress_bar";
+
+
+
