Revisando devise en turbo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,14 @@
   <p>A blazing fast quote editor built with Hotwire</p>
 
   <% if user_signed_in? %>
-    <%= link_to "View quotes", quotes_path, class: "btn btn--dark" %>
+    <%= link_to "View quotes", 
+                quotes_path,
+                class: "btn btn--dark",
+                data: { turbo: false } %>
   <% else %>
-    <%= link_to "Sign in", new_user_session_path, class: "btn btn--dark" %>
+    <%= link_to "Sign in",
+                 new_user_session_path,
+                 class: "btn btn--dark",
+                 data: { turbo: false } %>
   <% end %>
 </main>
