Turbo Streams and security

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,12 +5,10 @@
   <% if user_signed_in? %>
     <%= link_to "View quotes", 
                 quotes_path,
-                class: "btn btn--dark",
-                data: { turbo: false } %>
+                class: "btn btn--dark" %>
   <% else %>
     <%= link_to "Sign in",
                  new_user_session_path,
-                 class: "btn btn--dark",
-                 data: { turbo: false } %>
+                 class: "btn btn--dark"%>
   <% end %>
 </main>
