--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -14,6 +14,8 @@
 @import "components/visually_hidden";
 @import "components/quote";
 @import "components/navbar";
+@import "components/flash";
+@import "config/animations";
 
 
 // Layouts
