--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
 
   <body>
     <%= render "layouts/navbar" %>
+
+    <div id="flash" class="flash" style="text-align: center">
+        <%= render "layouts/flash" %>
+    </div>
+    
     <%= yield %>
   </body>
 </html>
