--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar">
   <% if user_signed_in? %>
     <div class="navbar__brand">
-      <%= current_company.name %>
+      <%= current_company.name if  current_company %>
     </div>
     <div class="navbar__name">
       <%= current_user.name %>
