--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -18,6 +18,7 @@
 @import "components/empty_state";
 @import "components/line_item_date";
 @import "components/line_item";
+@import "components/quote_total";
 
 
 // Layouts
@@ -31,5 +32,6 @@
 //Animations
 @import "config/animations";
 
-
+// Utilities
+@import "utilities/margins";
 
